@@ -1,3 +1,5 @@
+2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/GrampsDb/_GrampsInMemDB.py: xml load/save not working, fixed #1319
 
 2007-10-21 Jim Sack <jgsack@san.rr.com>
 	* src/ansel_utf8.py: (see tracker issue #831) fix inoperative
